[ADD]Eduactional Promotion

--- a/education_promotion/static/description/index.html
+++ b/education_promotion/static/description/index.html
@@ -8,22 +8,34 @@
    style="margin:75px 0;position: relative;color: #000;background-position: center;background: #ffffff;border-bottom: 1px solid #e4e4e4; padding-bottom: 30px;">
    <div class="col-md-7 col-sm-12 col-xs-12" style="padding: 0px">
       <div style=" margin: 0 0 0px;padding: 20px 0 10;font-size: 23px;line-height: 35px;font-weight: 400;color: #000;border-top: 1px solid rgba(255,255,255,0.1);border-bottom: 1px solid rgba(255,255,255,0.11);text-align: left;">
-         <h1 style="font-size: 39px;font-weight: 600;margin: 0px !important;">Educational Attendance Management </h1>
-         <h3 style="font-size: 21px;margin-top: 8px;position: relative;"> Opener to Student Attendance Management System for Educational ERP  </h3>
+         <h1 style="font-size: 39px;font-weight: 600;margin: 0px !important;">Educational Promotion</h1>
+         <h3 style="font-size: 21px;margin-top: 8px;position: relative;">The Ultimate Educational Management Software</h3>
       </div>
       <h2 style="font-weight: 600;font-size: 1.8rem;margin-top: 15px;">Key Highlights</h2>
       <ul style=" padding: 0 1px; list-style: none; ">
          <li style="display: flex;align-items: center;padding: 8px 0;font-size: 18px;">
 			 <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-            Attendance Tracking
+            Student Promotion to Higher Class
          </li>
          <li style="display: flex;align-items: center;padding: 8px 0;font-size: 18px;">
 			 <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-            Attendance Table
+             Student History
          </li>
          <li style="display: flex;align-items: center;padding: 8px 0;font-size: 18px;">
 			 <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-            Analysis Report
+            Academic Year Closing
+         </li>
+         <li style="display: flex;align-items: center;padding: 8px 0;font-size: 18px;">
+			 <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
+            Academic Results
+         </li>
+         <li style="display: flex;align-items: center;padding: 8px 0;font-size: 18px;">
+			 <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
+            Promotion Results
+         </li>
+         <li style="display: flex;align-items: center;padding: 8px 0;font-size: 18px;">
+			 <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
+            New Academic Year
          </li>
       </ul>
    </div>
@@ -69,12 +81,13 @@
                   <hr style="margin-top: 0px;margin-bottom: 2%;border: 0;text-align: center;border-top: 3px solid #d21c22;width: 5%;">
                   <h3 class="oe_slogan"
                      style="text-align: center;font-size: 19px;width: 100%;margin: 0;margin-top: 14px;color: #000 !important;opacity: 1 !important;line-height: 31px;font-weight: 400;letter-spacing: .5px;margin-bottom: 21px;">
-                     A day in school starts with the teacher calling for taking the attendance. Attendance tracking allows
-                     schools and educational institutions to make better administrative and financial decisions. Especially,
-                     an Attendance tracking management allows the schools to keep abreast of their student interest. With
-                     Education Attendance ERP, one can efficiently manage the student attendance and detailed analysis
-                     report. The user-friendly interface allows an easy management of attendance with
-                     minimal human interference
+                     Educational ERP is the new venture of Cybrosys Technologies initiating a hassle free management of schools and related management functions.
+                     Educational ERP encompass different modules like Student Admission, Student Attendance, Staff payroll, Exam Management and many more.
+                     Each module is comprehensive and effectively manages the embedded tasks within. Educational Promotion management software is a comprehensive suite
+                     of application providing the facility of academic transitions, enabling the promotion of students to respective higher classes without hassle.
+                     The module manages every activities encompassing the promotion requisites like closure of current academic year, automating new academic year,
+                     creation of new classes for coming year, conversely shifting the students to next level class and also the viewing the student history.
+                     With Educational promotion management module, one can easily maintain and manage the list of students who got promoted to higher degree of education.
                   </h3>
                </div>
                <div class="px-3 pt-1 tab-pane fade" id="pills-home1" role="tabpanel" aria-labelledby="
@@ -90,23 +103,38 @@
                <div class="px-3 pt-1 tab-pane fade" id="pills-features" role="tabpanel" aria-labelledby="
                   pills-home-tab">
                   <!-- feature tab-->
-                  <h2 style="font-weight: 600;text-align: center;width: 100%;">Educational Attendance Management </h2>
+                  <h2 style="font-weight: 600;text-align: center;width: 100%;">Educational Promotion</h2>
                   <hr style="margin-top: 0px;margin-bottom: 2%;border: 0;text-align: center;border-top: 3px solid #d21c22;width: 5%;">
 
                      <p class="mb8"
                         style="font-family: Roboto;color: #000;list-style-type: square;font-size: 19px;line-height: 50px; background-color: #3a34380d;padding-left: 20px;border-radius: 7px;list-style: none;">
                         <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-                        Attendance Tracking
+                        Student Promotion to Higher Class
                      </p>
                      <p class="mb8"
                         style="font-family: Roboto;color: #000;list-style-type: square;font-size: 19px;line-height: 50px; background-color: #3a34380d;padding-left: 20px;border-radius: 7px;list-style: none;">
                         <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-                        Attendance Table
+                        Student History
                      </p>
                      <p class="mb8"
                         style="font-family: Roboto;color: #000;list-style-type: square;font-size: 19px;line-height: 50px; background-color: #3a34380d;padding-left: 20px;border-radius: 7px;list-style: none;">
                         <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-                        Analysis Report
+                        Academic Year Closing
+                     </p>
+                     <p class="mb8"
+                        style="font-family: Roboto;color: #000;list-style-type: square;font-size: 19px;line-height: 50px; background-color: #3a34380d;padding-left: 20px;border-radius: 7px;list-style: none;">
+                        <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
+                        Academic Results
+                     </p>
+                     <p class="mb8"
+                        style="font-family: Roboto;color: #000;list-style-type: square;font-size: 19px;line-height: 50px; background-color: #3a34380d;padding-left: 20px;border-radius: 7px;list-style: none;">
+                        <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
+                        Promotion Results
+                     </p>
+                     <p class="mb8"
+                        style="font-family: Roboto;color: #000;list-style-type: square;font-size: 19px;line-height: 50px; background-color: #3a34380d;padding-left: 20px;border-radius: 7px;list-style: none;">
+                        <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
+                        New Academic Year
                      </p>
                </div>
                <!-- Screenshot tab-->
@@ -125,12 +153,12 @@
                                        <h3 class="alert"
                                           style="font-weight:400;color: #091E42;background: #fff;text-align: left;border-radius: 0; font-size: 18px;">
                                           <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-                                          Create a new attendance
+                                          Academic Year Closing
                                        </h3>
-                                        <p></p>
+                                        <p>Allows to close the current academic year.Click "Compute Final Result" to get the final exam results of all classes. </p>
                                        <div style=""><img class="img img-responsive center-block"
                                           style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
-                                          src="images/1_create_attendance_table.png"></div>
+                                          src="images/compute_result.png"></div>
                                     </div>
                                  </div>
                                  <div class="carousel-item " style="min-height: 0px;">
@@ -139,14 +167,13 @@
                                        <h3 class="alert"
                                           style="font-weight:400;color: #091E42;background: #fff;text-align: left;border-radius: 0; font-size: 18px;">
                                           <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-                                          Warning
+                                          Compute Academic Result
                                        </h3>
-                                       <p>
-                                          Can create only one attendance table for a class in a particular date
+                                       <p>Result is computed based on the final exam conducted for the classes.
                                        </p>
                                        <div style=""><img class="img img-responsive center-block"
                                           style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
-                                          src="images/2_warning_attendance.png"></div>
+                                          src="images/close_ay_btn.png"></div>
                                     </div>
                                  </div>
                                  <div class="carousel-item " style="min-height: 0px;">
@@ -155,28 +182,74 @@
                                        <h3 class="alert"
                                           style="font-weight:400;color: #091E42;background: #fff;text-align: left;border-radius: 0; font-size: 18px;">
                                           <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-                                          Attendance Table
+                                          Promotion Results
                                        </h3>
-                                       <p></p>
+                                       <p>
+                                       </p>
                                        <div style=""><img class="img img-responsive center-block"
                                           style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
-                                          src="images/3_attendance_table.png"></div>
+                                          src="images/promotion_result.png"></div>
                                     </div>
                                  </div>
-                                 <div class="carousel-item" style="min-height: 0px;">
+                                 <div class="carousel-item " style="min-height: 0px;">
                                     <div class="col-xs-12 col-sm-12 col-md-12 mb16 mt16"
                                        style="float: left;">
                                        <h3 class="alert"
                                           style="font-weight:400;color: #091E42;background: #fff;text-align: left;border-radius: 0; font-size: 18px;">
                                           <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-                                          Report
+                                         Close the Academic Year
                                        </h3>
-                                       <p>
-                                          Detailed analysis report
+                                       <p>On closure of current academic year, it automates new academic year, creates new classes for coming year,
+                                          conversely shifting the students to next level class and also allows viewing the student history.
                                        </p>
                                        <div style=""><img class="img img-responsive center-block"
                                           style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
-                                          src="images/4_attendance_report.png"></div>
+                                          src="images/close_ay.png"></div>
+                                    </div>
+                                 </div>
+                                 <div class="carousel-item " style="min-height: 0px;">
+                                    <div class="col-xs-12 col-sm-12 col-md-12 mb16 mt16"
+                                       style="float: left;">
+                                       <h3 class="alert"
+                                          style="font-weight:400;color: #091E42;background: #fff;text-align: left;border-radius: 0; font-size: 18px;">
+                                          <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
+                                         Promotion of Students
+                                       </h3>
+                                       <p>Students who have passed will promote nex level. Where as Students who failed will remains in the same class itself.
+                                       </p>
+                                       <div style=""><img class="img img-responsive center-block"
+                                          style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
+                                          src="images/promoted.png"></div>
+                                    </div>
+                                 </div>
+                                 <div class="carousel-item " style="min-height: 0px;">
+                                    <div class="col-xs-12 col-sm-12 col-md-12 mb16 mt16"
+                                       style="float: left;">
+                                       <h3 class="alert"
+                                          style="font-weight:400;color: #091E42;background: #fff;text-align: left;border-radius: 0; font-size: 18px;">
+                                          <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
+                                         Student History
+                                       </h3>
+                                       <p>
+                                       </p>
+                                       <div style=""><img class="img img-responsive center-block"
+                                          style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
+                                          src="images/history.png"></div>
+                                    </div>
+                                 </div>
+                                 <div class="carousel-item " style="min-height: 0px;">
+                                    <div class="col-xs-12 col-sm-12 col-md-12 mb16 mt16"
+                                       style="float: left;">
+                                       <h3 class="alert"
+                                          style="font-weight:400;color: #091E42;background: #fff;text-align: left;border-radius: 0; font-size: 18px;">
+                                          <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
+                                         Student History
+                                       </h3>
+                                       <p>
+                                       </p>
+                                       <div style=""><img class="img img-responsive center-block"
+                                          style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
+                                          src="images/student_history.png"></div>
                                     </div>
                                  </div>
                               </div>
@@ -565,7 +638,3 @@
       </div>
    </section>
 </div>
-
-
-
-
