Jul 7 : [IMP] Style Updated 'education_theme'

--- a/education_theme/static/description/index.html
+++ b/education_theme/static/description/index.html
@@ -8,6 +8,10 @@
                 class="mr-2">
                 <i class="fa fa-check mr-1"></i>Community
             </div>
+            <div style="color: #875A7B; font-size: 14px; font-family: 'Montserrat', sans-serif; font-weight: bold; background-color: white; display: inline-block; padding: 3px 10px; border-radius: 50px;"
+                class="mr-2">
+                <i class="fa fa-check mr-1"></i>Enterprise
+            </div>
         </div>
     </div>
     <!-- END OF TITLE BAR -->
@@ -109,7 +113,7 @@
     <div class="col-sm-12 py-4">
         An orderly composition leads to efficient tracking and better productivity.
         Educational ERP is a robust and comprehensive user-friendly ERP solution specially crafted for school administration.
-        Inspired from primary colors, the website is set in red, green and yellow making it attractive and live in action.
+        Inspired from primary colors, the website is set in teal and dark red making it attractive and live in action.
         Experience the smartest way of managing from now on
     </div>
 </div>
@@ -158,7 +162,7 @@
             <img src="assets/misc/check-box.png" class="mr-2" />
             <div>
                 <span
-                    style="display: block; font-family: 'Montserrat', sans-serif; font-size: 18px; font-weight: bold;">Attractive Colour Combination</span>
+                    style="display: block; font-family: 'Montserrat', sans-serif; font-size: 18px; font-weight: bold;">List View</span>
             </div>
         </div>
         <div class="d-flex align-items-start" style="margin-top: 30px; margin-bottom: 30px">
@@ -166,6 +170,13 @@
             <div>
                 <span
                     style="display: block; font-family: 'Montserrat', sans-serif; font-size: 18px; font-weight: bold;">Reports</span>
+            </div>
+        </div>
+        <div class="d-flex align-items-start" style="margin-top: 30px; margin-bottom: 30px">
+            <img src="assets/misc/check-box.png" class="mr-2" />
+            <div>
+                <span
+                    style="display: block; font-family: 'Montserrat', sans-serif; font-size: 18px; font-weight: bold;">Modified App Drawer in Community edition</span>
             </div>
         </div>
 
@@ -191,13 +202,17 @@
         </div>
 
         <div style="display: block; margin: 30px auto;">
-            <h3 style="font-family: 'Montserrat', sans-serif; font-size: 18px; font-weight: bold;">Reports</h3>
+            <h3 style="font-family: 'Montserrat', sans-serif; font-size: 18px; font-weight: bold;">Admission List View </h3>
             <img src="assets/screenshots/2.png" class="img-thumbnail">
         </div>
 
         <div style="display: block; margin: 30px auto;">
-            <h3 style="font-family: 'Montserrat', sans-serif; font-size: 18px; font-weight: bold;">Attractive Colour Combination</h3>
+            <h3 style="font-family: 'Montserrat', sans-serif; font-size: 18px; font-weight: bold;">Reports</h3>
             <img src="assets/screenshots/3.png" class="img-thumbnail">
+        </div>
+        <div style="display: block; margin: 30px auto;">
+            <h3 style="font-family: 'Montserrat', sans-serif; font-size: 18px; font-weight: bold;">Modified App Drawer in Community edition</h3>
+            <img src="assets/screenshots/4.png" class="img-thumbnail">
         </div>
 
     </div>
@@ -220,54 +235,68 @@
             <!-- The slideshow -->
             <div class="carousel-inner" style="padding: 30px;">
                 <div class="carousel-item" style="min-height: 198.656px;">
-                    <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16" style="float:left">
-                        <a href="https://apps.odoo.com/apps/modules/15.0/dynamic_accounts_report/" target="_blank">
+                    <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16"
+                         style="float:left">
+                        <a href="https://apps.odoo.com/apps/modules/16.0/custom_gantt_view/"
+                           target="_blank">
                             <div style="border-radius:10px">
-                                <img class="img img-responsive center-block" style="border-radius: 0px;"
-                                    src="//apps.odoocdn.com/apps/assets/15.0/account_day_book/assets/modules/dynamic_accounts_report.png?3e73b0c">
+                                <img class="img img-responsive center-block"
+                                     style="border-radius: 0px;"
+                                     src="./assets/modules/1.png">
                             </div>
                         </a>
                     </div>
-                    <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16" style="float:left">
-                        <a href="https://apps.odoo.com/apps/modules/15.0/custom_gantt_view/" target="_blank">
+                    <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16"
+                         style="float:left">
+                        <a href="https://apps.odoo.com/apps/modules/16.0/whatsapp_mail_messaging/"
+                           target="_blank">
                             <div style="border-radius:10px">
-                                <img class="img img-responsive center-block" style="border-radius: 0px;"
-                                    src="//apps.odoocdn.com/apps/assets/15.0/account_day_book/assets/modules/custom_gantt_view.png?3e73b0c">
-                            </div>
+                                <img class="img img-responsive center-block"
+                                     style="border-radius: 0px;"
+                                     src="./assets/modules/2.png"></div>
                         </a>
                     </div>
-                    <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16" style="float:left">
-                        <a href="https://apps.odoo.com/apps/modules/15.0/project_custom_gantt/" target="_blank">
+                    <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16"
+                         style="float:left">
+                        <a href="https://apps.odoo.com/apps/modules/16.0/customer_followup_community/"
+                           target="_blank">
                             <div style="border-radius:10px">
-                                <img class="img img-responsive center-block" style="border-radius: 0px;"
-                                    src="//apps.odoocdn.com/apps/assets/15.0/account_day_book/assets/modules/project_custom_gantt.png?3e73b0c">
-                            </div>
+                                <img class="img img-responsive center-block"
+                                     style="border-radius: 0px;"
+                                     src="./assets/modules/3.png"></div>
                         </a>
                     </div>
                 </div>
-                <div class="carousel-item active" style="min-height: 198.656px;">
-                    <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16" style="float:left">
-                        <a href="https://apps.odoo.com/apps/modules/15.0/account_reports_xlsx/" target="_blank">
+                <div class="carousel-item active"
+                     style="min-height: 198.656px;">
+                    <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16"
+                         style="float:left">
+                        <a href="https://apps.odoo.com/apps/modules/16.0/sales_credit_limit/"
+                           target="_blank">
                             <div style="border-radius:10px">
-                                <img class="img img-responsive center-block" style="border-radius: 0px;"
-                                    src="//apps.odoocdn.com/apps/assets/15.0/account_day_book/assets/modules/account_reports_xlsx.png?3e73b0c">
-                            </div>
+                                <img class="img img-responsive center-block"
+                                     style="border-radius: 0px;"
+                                     src="./assets/modules/4.png"></div>
                         </a>
                     </div>
-                    <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16" style="float:left">
-                        <a href="https://apps.odoo.com/apps/modules/15.0/base_accounting_kit/" target="_blank">
+                    <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16"
+                         style="float:left">
+                        <a href="https://apps.odoo.com/apps/modules/16.0/dynamic_accounts_report/"
+                           target="_blank">
                             <div style="border-radius:10px">
-                                <img class="img img-responsive center-block" style="border-radius: 0px;"
-                                    src="//apps.odoocdn.com/apps/assets/15.0/account_day_book/assets/modules/base_accounting_kit.gif?3e73b0c">
-                            </div>
+                                <img class="img img-responsive center-block"
+                                     style="border-radius: 0px;"
+                                     src="./assets/modules/5.png"></div>
                         </a>
                     </div>
-                    <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16" style="float:left">
-                        <a href="https://apps.odoo.com/apps/modules/15.0/hr_payroll_community/" target="_blank">
+                    <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16"
+                         style="float:left">
+                        <a href="https://apps.odoo.com/apps/modules/16.0/hr_zk_attendance/"
+                           target="_blank">
                             <div style="border-radius:10px">
-                                <img class="img img-responsive center-block" style="border-radius: 0px;"
-                                    src="//apps.odoocdn.com/apps/assets/15.0/account_day_book/assets/modules/hr_payroll_community.png?3e73b0c">
-                            </div>
+                                <img class="img img-responsive center-block"
+                                     style="border-radius: 0px;"
+                                     src="./assets/modules/6.png"></div>
                         </a>
                     </div>
                 </div>
